syntax = "proto3";
package hds;

message HelloRequest {
  string name = 1;
}

message GetClientInfoRequest {
  string jwt = 1;
  string machine_id =2;
  string name = 3;
}