syntax = "proto3";
package hds;

message HelloResponse {
  string message = 1;
}